--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
   </head>
   <body>
     <h1>🐍 Snake PWA</h1>
-    <canvas id="game" width="500" height="500"></canvas>
     <p>Puntaje: <span id="score">0</span></p>
+    <canvas id="game" width="500" height="500"></canvas>
+    <div class="controls">
+      <button id="up">⬆</button>
+      <div>
+        <button id="left">⬅</button>
+        <button id="down">⬇</button>
+        <button id="right">➡</button>
+      </div>
+    </div>
 
     <script src="game.js"></script>
 
